--- a/src/app/components/pages/templates/law/law.scss
+++ b/src/app/components/pages/templates/law/law.scss
@@ -312,7 +312,9 @@ $button-hover: darken($maroon-color, 10%);
   &.whatsapp {
     background: linear-gradient(135deg, #25D366 0%, #128C7E 100%) !important;
   }
-
+  &.pix {
+    background: linear-gradient(135deg, #25D366 0%, darken(#25D366, 10%) 100%) !important;
+  }
   &.instagram {
     background: linear-gradient(135deg, #833AB4 0%, #C13584 100%) !important;
   }
